# nbexample

./: CMakeLists.txt  pyproject.toml
src/: nbexample_ext.cpp
src/nbexample/: __init__.py
